# minefetch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/minefetch/: fetch_out.hpp  minecraft_motd.hpp  motd_config.hpp  utils.hpp
src/: fetch_out.cpp  main.cpp  minecraft_motd.cpp  motd_config.cpp  utils.cpp
